# hyperliquid-info-client

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
src/: lib.rs  req.rs  response_structs.rs
tests/: info.rs
