[package]
name = "hyperliquid-info-client"
version = "0.4.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2.1", features = ["full"] }
reqwest = "0.11.23"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.63"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread","full"] }